WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213922
Fix potential pixel buffer leak in ImageRotationSessionVT::rotate
https://bugs.webkit.org/show_bug.cgi?id=213922
Summary
Fix potential pixel buffer leak in ImageRotationSessionVT::rotate
youenn fablet
Reported
2020-07-03 04:54:29 PDT
Fix potential pixel buffer leak in ImageRotationSessionVT::rotate
Attachments
Patch
(3.73 KB, patch)
2020-07-03 05:19 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(3.74 KB, patch)
2020-07-03 07:51 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2020-07-03 05:19:47 PDT
Created
attachment 403452
[details]
Patch
youenn fablet
Comment 2
2020-07-03 05:20:13 PDT
<
rdar://problem/64133927
>
youenn fablet
Comment 3
2020-07-03 05:21:11 PDT
Looking at other WebKit code, I am wondering whether we should not add both kCVPixelBufferIOSurfacePropertiesKey and kCVPixelFormatOpenGLESCompatibility/kCVPixelBufferOpenGLCompatibilityKey like done in ImageTransferSession.
youenn fablet
Comment 4
2020-07-03 07:51:11 PDT
Created
attachment 403459
[details]
Patch
EWS
Comment 5
2020-07-07 12:17:35 PDT
Committed
r264034
: <
https://trac.webkit.org/changeset/264034
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403459
[details]
.
Darin Adler
Comment 6
2020-07-07 12:28:28 PDT
Comment on
attachment 403459
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=403459&action=review
> Source/WebCore/platform/graphics/cv/ImageRotationSessionVT.mm:118 > + result = adoptCF(rawRotatedBuffer);
I would use auto here rather than defining result above.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug