Fix potential pixel buffer leak in ImageRotationSessionVT::rotate https://bugs.webkit.org/show_bug.cgi?id=213922

Reviewed by Eric Carlson.

Fix a potential memory leak in an error case.
Add more logging to be able to see errors.
Remove the kCVPixelBufferIOSurfacePropertiesKey key on iOS from the buffer pool to revert
part of https://trac.webkit.org/changeset/258504/webkit that seems problematic in iOS.

* platform/graphics/cv/ImageRotationSessionVT.mm:
(WebCore::ImageRotationSessionVT::initialize):
(WebCore::ImageRotationSessionVT::rotate):


Canonical link: https://commits.webkit.org/226847@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264034 268f45cc-cd09-0410-ab3c-d52691b4dbfc